--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Travel Website</title>
+    <title>Travel & Learning Website</title>
     <style>
         body {
             margin: 0;
@@ -16,6 +16,7 @@
             padding: 15px;
             position: sticky;
             top: 0;
+            z-index: 1000;
         }
 
         nav a {
@@ -51,6 +52,11 @@
             color: white;
         }
 
+        #about {
+            background-color: #0f172a;
+            color: white;
+        }
+
         h2 {
             margin-top: 0;
         }
@@ -64,14 +70,15 @@
         <a href="#blogs">Blogs</a>
         <a href="#travels">Travels</a>
         <a href="#destinations">Destinations</a>
+        <a href="#about">About</a>
     </nav>
 
     <!-- Home Section -->
     <section id="home">
         <h2>Home</h2>
         <p>
-            Welcome to our travel website. Here you will find inspiring travel stories,
-            useful tips, and beautiful destinations from around the world.
+            Welcome to our space where curiosity meets exploration. This website
+            blends travel experiences, learning, and personal growth.
         </p>
     </section>
 
@@ -79,8 +86,8 @@
     <section id="blogs">
         <h2>Blogs</h2>
         <p>
-            Read our latest travel blogs where we share personal experiences,
-            budget travel ideas, food discoveries, and cultural insights.
+            Here you will find blogs on travel, learning journeys, personal thoughts,
+            and reflections inspired by science and real-world experiences.
         </p>
     </section>
 
@@ -88,8 +95,8 @@
     <section id="travels">
         <h2>Travels</h2>
         <p>
-            Explore our travel journeys across mountains, beaches, cities,
-            and villages. Each trip is filled with adventure and learning.
+            Travel is not just about places, but perspectives. These journeys
+            represent exploration beyond textbooks and classrooms.
         </p>
     </section>
 
@@ -97,8 +104,37 @@
     <section id="destinations">
         <h2>Destinations</h2>
         <p>
-            Discover popular destinations like Paris, Bali, Goa, Tokyo,
-            and hidden gems that are perfect for your next vacation.
+            From peaceful mountains to vibrant cities, destinations shape
+            curiosity, creativity, and a deeper understanding of the world.
+        </p>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About</h2>
+        <p>
+            I am a student pursuing <strong>B.Sc. (Hons.) Physics</strong> at
+            <strong>Delhi University</strong>, driven by curiosity about how the
+            universe works—from the smallest particles to the largest cosmic
+            structures.
+        </p>
+
+        <p>
+            Physics is not just a subject for me; it is a way of thinking.
+            It teaches logical reasoning, problem-solving, and the courage to
+            question the unknown.
+        </p>
+
+        <p>
+            The future of physics lies in pushing boundaries—whether through
+            quantum technologies, space exploration, renewable energy, or
+            fundamental research. As a physics student, I aspire to contribute
+            to this future by learning deeply, thinking critically, and applying
+            science for the betterment of society.
+        </p>
+
+        <p>
+            <strong>Physics today is discovery; physics tomorrow is possibility.</strong>
         </p>
     </section>
 
